# libgimp.js

./: AUTHORS  ChangeLog  HACKING  Makefile  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  gimp-plugin-template.doap  js-plugin.c  js-plugin.h  script-js.c  script-js.h  test_plug_in.c
GOject/plugin_bindings/: Makefile  js-greeter.c  js-greeter.h  main.c  main.js  script.sh
GOject/tutorial-code/: Makefile  main.c
Gjs/: hello-world.js
Plug-in/: hello.c  test_plug_in.c
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
debian/: .cvsignore  Makefile.am  changelog  control  copyright  gimp-plugin-template.doc-base  rules
help/: Makefile  Makefile.in
help/en/: Makefile  Makefile.in  index.html
help/images/: Makefile  Makefile.in
plugin_bindings/: Makefile  js-plugin.c  js-plugin.h  main.js
po/: .cvsignore  ChangeLog  Makefile  Makefile.in  README.translators  az.gmo  az.po  de.gmo  de.po  fr.gmo  fr.po  oc.po  sk.gmo  sk.po  sv.gmo  sv.po  zh_TW.gmo  zh_TW.po
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  gimp-plugin-template  interface.c  interface.h  main.c  main.h  render.c  render.h  script-js
src/.deps/: interface.Po  main.Po  render.Po
tutorial-code/: Tut-0.1.gir  Tut-0.1.typelib  main.js  script.sh
